--- a/index.html
+++ b/index.html
@@ -4,72 +4,140 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="normalize.css">
+  <!-- <link rel="stylesheet" href="normalize.css"> -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
   <style>
     .row1 {
       height: 40px;
+      padding: 20px;
     }
     .row2 {
       height: 60px;
+      padding: 20px;
+    }
+    .row3 {
+      height: 40px;
+      padding: 20px;
+    }
+    body {
+      padding-left: 30px;
+      padding-right: 30px;
     }
   </style>
   <title>2022-02-11</title>
 </head>
 <body>
+
   <header>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+            aria-expanded="false">
+            Dropdown
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li><a class="dropdown-item" href="#">Action</a></li>
+            <li><a class="dropdown-item" href="#">Another action</a></li>
+            <li>
+              <hr class="dropdown-divider">
+            </li>
+            <li><a class="dropdown-item" href="#">Something else here</a></li>
+          </ul>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled">Disabled</a>
+        </li>
+      </ul>
+      <form class="d-flex">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success" type="submit">Search</button>
+      </form>
+    </div>
+  </div>
+</nav>
+
+<div class="jumbotron">
+  <h1 class="display-4">Hello, world!</h1>
+  <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured
+    content or information.</p>
+  <hr class="my-4">
+  <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+  <p class="lead">
+    <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+  </p>
+</div>
 
   </header>
+
   <body>
+
   <section>
     <div class="container">
       <div class="row row1">
         <div class="col-lg-3">
           3 unit column
         </div>
-        <div class="col-lg-6">
+        <div class="col-md-6">
           6 unit column
         </div>
-        <div class="col-lg-3">
+        <div class="col-md-3">
           3 unit column
         </div>
       </div>
       <div class="row row2">
-        <div class="col-lg-3">
+        <div class="col-md-3">
           3 unit column
         </div>
-        <div class="col-lg-3">
+        <div class="col-md-3">
           3 unit column
         </div>
-        <div class="col-lg-3">
+        <div class="col-md-3">
           3 unit column
         </div>
-        <div class="col-lg-3">
+        <div class="col-md-3">
           3 unit column
         </div>
       </div>
       <div class="row row3">
-        <div class="col-lg-4">
+        <div class="col-md-4">
           4 unit column
         </div>
-        <div class="col-lg-4">
+        <div class="col-md-4">
           4 unit column
         </div>
-        <div class="col-lg-4">
+        <div class="col-md-4">
           4 unit column
         </div>
       </div>
     </div>
   </section>
+
   <article>
 
   </article>
+
   </body>
+
   <footer>
 
   </footer>
+  
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
